# rapp

./: Cargo.toml  docker-compose.yml
core/: Cargo.toml
core/src/: lib.rs  logging.rs
core/src/db/: mod.rs  settings.rs  url_builder.rs
core/src/http/: admin.rs  metrics.rs  mod.rs  slog_logging_middleware.rs
db/: Cargo.toml
httpd/: Cargo.toml
httpd/src/: main.rs
logging/: Cargo.toml
logging/src/: main.rs
sample/: .dockerignore  Cargo.toml  Dockerfile
