[package]
name = "rapp"
version = "0.1.0"
authors = ["Elmar Athmer <elmar@athmer.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.5.2"
slog-async = "2.5.0"
slog-envlogger = "2.2.0"
slog-term = "2.5.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"
slog-json = "2.3.0"
chrono = "0.4.11"
