[package]
name = "rapp"
version = "0.1.0"
authors = ["Elmar Athmer <elmar@athmer.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.5.2"
slog-async = "2.5.0"
slog-envlogger = "2.2.0"
slog-term = "2.5.0"
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"
slog-json = "2.3.0"
chrono = "0.4.11"
actix-web = { version = "2.0.0", optional = true }
futures = { version = "0.3.4", optional = true }
pin-project = { version = "0.4.9", optional = true }
serde_json = { version = "1.0.51", optional = true }
serde = { version = "1.0.106", optional = true, features = ["derive"] }
r2d2 = { version = "0.8.6", optional = true }
diesel = { version = "1.4.3", optional = true, features = ["postgres", "r2d2"] }


[features]
web = ["actix-web", "futures", "pin-project", "serde", "serde_json"]
db = ["r2d2", "diesel"]

