[package]
name = "httpd"
version = "0.1.0"
authors = ["Elmar Athmer <elmar.athmer@rewe-digital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapp = { path = "../core", features = ["web"] }
actix-rt = "1.1.0"
